--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@typescript-eslint/parser": ">=5.0.0 <6.0.0",
-    "express": "4.18"
+    "express": "4.18",
+    "livekit-server-sdk": "^1.0.2"
   },
   "devDependencies": {
     "@types/express": "4.17.14",
