--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "@typescript-eslint/parser": ">=5.0.0 <6.0.0",
+    "dotenv": "^16.0.2",
     "express": "4.18",
-    "livekit-server-sdk": "^1.0.2"
+    "livekit-server-sdk": "^1.0.2",
+    "redis": "^4.3.1"
   },
   "devDependencies": {
     "@types/express": "4.17.14",
