--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/src/app.js",
+    "start": "node dist/app.js",
     "build-docker": "docker build --tag ximi-server ."
   },
   "keywords": [],
