fix docker configuration file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,3 +25,6 @@ services:
       - "./redis.conf:/etc/redis.conf"
   ximi-server:
     image: ximi-server:latest
+    network_mode: "host"
+    env_file:
+      - .env
