--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/app.js",
-    "build-docker": "docker build --tag ximi-server ."
+    "build-docker": "docker build --tag ximi-server .",
+    "swagger-autogen": "node swagger.js"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,9 @@
     "dotenv": "^16.0.2",
     "express": "4.18",
     "livekit-server-sdk": "^1.0.2",
-    "redis": "^4.3.1"
+    "redis": "^4.3.1",
+    "swagger-autogen": "^2.22.0",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "@types/express": "4.17.14",
