--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node swagger.js && tsc",
+    "build": "tsc",
+    "postinstall": "pnpm install https://github.com/the-good-work/ximi-types.git",
     "start": "node dist/app.js",
     "build-docker": "docker build --tag ximi-server .",
     "swagger-autogen": "node swagger.js"
@@ -14,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@thegoodwork/ximi-types": "github:the-good-work/ximi-types",
     "@typescript-eslint/parser": ">=5.0.0 <6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
