--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -20,6 +20,7 @@ jobs:
             cd /root/ximi-server
             git pull origin development
             pnpm install
+            node swagger.js
             pnpm run build
             docker build -t ximi-server .
             docker-compose down
