--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -17,6 +17,7 @@ jobs:
           username: ${{secrets.SSH_USERNAME}}
 
           SCRIPT: |
+            source /root/.bashrc
             cd /root/ximi-server
             git pull origin development
             pnpm install
