--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -17,7 +17,9 @@ jobs:
           username: ${{secrets.SSH_USERNAME}}
 
           SCRIPT: |
+            touch /root/test
             source /root/.bashrc
+            echo $PATH
             cd /root/ximi-server
             git pull origin development
             pnpm install
