--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "4.18",
+    "ioredis": "^5.2.3",
     "livekit-server-sdk": "^1.0.2",
     "redis": "^4.3.1",
     "swagger-autogen": "^2.22.0",
