--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "prestart": "node swagger.js",
-    "postinstall": "pnpm install https://github.com/the-good-work/ximi-types.git",
     "start": "node dist/app.js",
-    "dev": "tsc -w",
+    "dev": "ts-node-dev -- src/app.ts",
     "build-docker": "docker build --tag ximi-server ."
   },
   "keywords": [],
@@ -31,12 +30,14 @@
   },
   "devDependencies": {
     "@types/express": "4.17.14",
+    "@types/node": "^18.11.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "*"
   }
 }
