--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "4.17.14",
     "@types/node": "^18.11.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
