--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "4.17.14",
     "@types/node": "^18.11.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
