--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "ioredis": "^5.2.3",
     "livekit-server-sdk": "^1.0.2",
     "redis": "^4.3.1",
-    "string-validator": "^1.0.5",
     "swagger-autogen": "^2.22.0",
-    "swagger-ui-express": "^4.5.0"
+    "swagger-ui-express": "^4.5.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
@@ -34,6 +34,7 @@
     "@types/express": "4.17.14",
     "@types/node": "^18.11.7",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/validator": "^13.7.9",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
