--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ioredis": "^5.2.3",
     "livekit-server-sdk": "^1.0.2",
     "redis": "^4.3.1",
+    "short-unique-id": "^4.4.4",
     "swagger-autogen": "^2.22.0",
     "swagger-ui-express": "^4.5.0",
     "validator": "^13.7.0"
