--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,6 @@ services:
   caddy:
     image: livekit/caddyl4
     command: run --config /etc/caddy.yaml --adapter yaml
-    restart: unless-stopped
     network_mode: "host"
     volumes:
       - "./caddy.yaml:/etc/caddy.yaml"
@@ -13,8 +12,9 @@ services:
   livekit:
     image: livekit/livekit-server:latest
     command: --config /etc/livekit.yaml
-    restart: unless-stopped
     network_mode: "host"
+    depends_on: 
+      - redis
     volumes:
       - "./livekit.yaml:/etc/livekit.yaml"
   redis:
@@ -28,3 +28,5 @@ services:
     network_mode: "host"
     env_file:
       - .env
+    depends_on: 
+      - livekit
